--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <section id="aimSection" class="container-fluid bg-white text-center text-black"
                      style="background-color: gray;">
                 <h1 style="font-size: 2.5cm; color: white">Aim</h1>
-                <p class="method">XYZABC
+                <p class="method">
                 The main goal is to present a comprehensive analysis of learning activities on the Learning Management System. 
                 In this topic, in-depth research will be done on some popular LMSs like Moodle… We will develop a core architecture for collecting data from learners in an LMS. Technologies based on Data Lake, Data Warehouse architectures such as Apache Spark, Apache Iceberg… will be used to store and manage datasets. Based on the processed data, we will create a student performance assessment of the courses using what we have learned about big data, machine learning… It can predict student outcomes based on the courses enrolled by the student. It can also provide schools and teacher managers with a global perspective on the quality of each course and the productivity of each student.
                 </p>
