font size update

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
             <!--Feature-->
             <section id="featureSection" class="container-fluid padding-row-lg bg-flat-black text-center text-white">
-                <h1 id="featureSection-header" class="header text-center"> <i class="fa fa-dropbox"></i> FINAL PRODUCTS </h1>
+                <h1 id="featureSection-header" class="header text-center" style="font-size: 1.5cm;"> <i class="fa fa-dropbox"></i> FINAL PRODUCTS </h1>
                 <h3 id="featureSection-description" class="width-half align-center-row text-justify-center">
                     Through this project, we expect to develop some models and applications to solve the problem. 
                     These models will help the LMS have better quality, thereby improving the learning efficiency
