--- a/index.html
+++ b/index.html
@@ -133,13 +133,12 @@ of each student as well as the quality of teaching.
                     Through out this project, we have studied a lot of papers related to LMSs:
                 </h2>
                 <div id="priceSection-line" class="line line-md line-blue align-center-horizontal"></div>
-
                 <div id="priceSection-body" class="container-fluid-sm flex-main-around flex-direction-auto-medium">
                     <div class="flex-direction-auto flex-col-1">
-                        <!-- First card -->
+                        <!-- First card --> 
                         <div id="card-free" class="flex-col bg-white flex-col-1 text-center margin-sm shadow-hover border border-light-gray">
                             <div class="text-white bg-flat-black border-bottom border-light-gray">
-                                <h1 id="free-title">FREE</h1>
+                                <h1 id="free-title">A case study in University</h1>
                             </div>
                             <div class="border-bottom border-light-gray">
                                 <h3 id="free-computer"> <span class="text-bold">1</span> PCs </h3>
@@ -403,8 +402,8 @@ of each student as well as the quality of teaching.
 
                         <div id="people-kha1" class="flex-col flex-col-1 text-center margin-sm">
                             <img id="kha-avatar" class="container-fluid-sm width-half align-center-row img-rounded" src="images/img_avatar.png">
-                            <h3 id="kha-name" class="text-bold">Kha Tran Dinh Nguyen</h3>
-                            <h3 id="kha-role" class="margin-none">Mobile Developer</span></h3>
+                            <h3 id="kha-name" class="text-bold">Tran Nguyen Thai Binh</h3>
+                            <h3 id="kha-role" class="margin-none">Software Engineering</span></h3>
                             <p id="kha-technology" class="margin-none">React Native</span></p>
                         </div>
 
