--- a/index.html
+++ b/index.html
@@ -138,19 +138,21 @@ of each student as well as the quality of teaching.
                         <!-- First card --> 
                         <div id="card-free" class="flex-col bg-white flex-col-1 text-center margin-sm shadow-hover border border-light-gray">
                             <div class="text-white bg-flat-black border-bottom border-light-gray">
-                                <h1 id="free-title">A case study in University</h1>
+                                <h1 id="free-title">Using learning analytics to predict
+                                    students performance in moodle lms </h1>
                             </div>
                             <div class="border-bottom border-light-gray">
-                                <h3 id="free-computer"> <span class="text-bold">1</span> PCs </h3>
+                                <h3 id="free-computer"> <span class="text-bold">Authors:</span> Y. Zhang, A. Ghandour, and V. Shestak,</h3>
                             </div>
                             <div class="border-bottom border-light-gray">
-                                <h3 id="free-account"> <span class="text-bold">1</span> Account </h3>
+                                <h3 id="free-account"> <span class="text-bold">Published in: </span> International Journal of Emerging Tech-
+                                    nologies in Learning (iJET), vol. 15, no. 20, pp. 102–115,  </h3>
                             </div>
                             <div class="border-bottom border-light-gray">
-                                <h3 id="free-info"> <span class="text-bold">Basic</span> Information </h3>
+                                <h3 id="free-info"> <span class="text-bold">Year Published: </span> 2020 </h3>
                             </div>
                             <div class="border-bottom border-light-gray">
-                                <h3 id="free-support"> <span class="text-bold">Working hours</span> Support </h3>
+                                <h3 id="free-support"> <span class="text-bold">Methods/Algorithms: </span> Data mining algorithm </h3>
                             </div>
                             <div class="container-fluid-sm border-bottom border-light-gray">
                                 <h1 id="free-price">$ 0</span></h1><p>per month</p>
@@ -165,19 +167,21 @@ of each student as well as the quality of teaching.
                           <!-- Second card -->
                           <div id="card-basic" class="flex-col bg-white flex-col-1 text-center margin-sm shadow-hover border border-light-gray">
                             <div class="text-white bg-blue border-bottom border-light-gray">
-                                <h1 id="basic-title">BASIC</h1>
+                                <h1 id="basic-title">Predicting student performance from their behavior in
+                                    learning management systems</h1>
                             </div>
                             <div class="border-bottom border-light-gray">
-                                <h3 id="basic-computer"> <span class="text-bold">10</span> PCs </h3>
+                                <h3 id="basic-computer"> <span class="text-bold">Authors: </span> P. sh and M. Zaanen </h3>
                             </div>
                             <div class="border-bottom border-light-gray">
-                                <h3 id="basic-account"> <span class="text-bold">1</span> Account </h3>
+                                <h3 id="basic-account"> <span class="text-bold">Published in: </span> International Journal of Information and Edu-
+                                    cation Technology, vol. 9, pp. 337–341 </h3>
                             </div>
                             <div class="border-bottom border-light-gray">
-                                <h3 id="basic-info"> <span class="text-bold">Basic</span> Information </h3>
+                                <h3 id="basic-info"> <span class="text-bold">Year Published: </span> 2019 </h3>
                             </div>
                             <div class="border-bottom border-light-gray">
-                                <h3 id="basic-support"> <span class="text-bold">Working hours</span> Support </h3>
+                                <h3 id="basic-support"> <span class="text-bold">Methods/Algorithms: </span> Decision tree J48 and ID3 algorithms </h3>
                             </div>
                             <div class="container-fluid-sm border-bottom border-light-gray">
                                 <h1 id="basic-price">$ 10</span></h1><p>per month</p>
@@ -194,19 +198,23 @@ of each student as well as the quality of teaching.
                         <!-- Third card -->
                         <div id="card-pro" class="flex-col bg-white flex-col-1 text-center  shadow-hover border border-light-gray">
                             <div class="text-white bg-red border-bottom border-light-gray">
-                                <h1 id="pro-title">PRO</h1>
+                                <h1 id="pro-title">Can we predict student learning performance from
+                                    lms data? A classification approach</h1>
                             </div>
                             <div class="border-bottom border-light-gray">
-                                <h3 id="pro-computer"> <span class="text-bold">25</span> PCs </h3>
+                                <h3 id="pro-computer"> <span class="text-bold">Authors: </span> A. Dutt and M. A. Ismail,  </h3>
                             </div>
                             <div class="border-bottom border-light-gray">
-                                <h3 id="pro-account"> <span class="text-bold">5</span> Accounts </h3>
+                                <h3 id="pro-account"> <span class="text-bold">Published in: </span> 3rd International Conference on Current
+                                    Issues in Education (ICCIE 2018), pp. 24–29 </h3>
                             </div>
                             <div class="border-bottom border-light-gray">
-                                <h3 id="pro-info"> <span class="text-bold">Detail</span> Information </h3>
+                                <h3 id="pro-info"> <span class="text-bold">Year Published: </span> 2019 </h3>
                             </div>
                             <div class="border-bottom border-light-gray">
-                                    <h3 id="pro-support"> <span class="text-bold">24/7</span> Support </h3>
+                                    <h3 id="pro-support"> <span class="text-bold">Methods/Algorithms: </span> Classi-
+                                        fication and Regression Trees (CART), Linear Discriminant Analysis (LDA), k-Nearest Neighbors
+                                        (k-NN), Support Vector Machine (SVM), and Random Forest (RF) </h3>
                             </div>
                             <div class="container-fluid-sm border-bottom border-light-gray">
                                 <h1 id="pro-price">$ 25</span></h1><p>per month</p>
@@ -218,32 +226,7 @@ of each student as well as the quality of teaching.
                             </div>
                         </div>
 
-                        <!--Fourth card -->
-                        <div id="card-premium" class="flex-col bg-white flex-col-1 text-center margin-sm shadow-hover border border-light-gray">
-                            <div class="text-white bg-yellow border-bottom border-light-gray">
-                                <h1 id="premium-title">PREMIUM</h1>
-                            </div>
-                            <div class="border-bottom border-light-gray">
-                                <h3 id="premium-computer"> <span class="text-bold">100</span> PCs </h3>
-                            </div>
-                            <div class="border-bottom border-light-gray">
-                                <h3 id="premium-account"> <span class="text-bold">10</span> Accounts </h3>
-                            </div>
-                            <div class="border-bottom border-light-gray">
-                                <h3 id="premium-info"> <span class="text-bold">Detail</span> Information </h3>
-                            </div>
-                            <div class="border-bottom border-light-gray">
-                                <h3 id="premium-support"> <span class="text-bold">24/7</span> Support </h3>
-                            </div>
-                            <div class="container-fluid-sm border-bottom border-light-gray">
-                                <h1 id="premium-price">$ 75</span></h1><p>per month</p>
-                            </div>  
-                            <div class="container-sm">
-                                <button id="button-signup-premium" class="btn btn-sm btn-rounded bg-yellow text-white border-yellow hover-light">
-                                    <h3 class="text-bold"><i class="fa fa-check"></i> Sign Up </h3>
-                                </button>
-                            </div>
-                        </div>
+                        
                     </div>
                 </div>
             </section>
