--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@ of each student as well as the quality of teaching.
                                         (k-NN), Support Vector Machine (SVM), and Random Forest (RF) </h3>
                             </div>
                             <div class="container-fluid-sm border-bottom border-light-gray">
-                                <h1 id="pro-price">$ 25</span></h1><p>per month</p>
+                                <h1 id="pro-price">$ hihi</span></h1><p>per month</p>
                             </div>  
                             <div class="container-sm">
                                 <button id="button-signup-pro" class="btn btn-sm btn-rounded bg-red text-white border-red hover-light">
