--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@ of each student as well as the quality of teaching.
                         <div id="card-free" class="flex-col bg-white flex-col-1 text-center margin-sm shadow-hover border border-light-gray">
                             <div class="text-white bg-flat-black border-bottom border-light-gray">
                                 <h1 id="free-title">Using learning analytics to predict
-                                    students performance in moodle lms </h1>
+                                    students performance in moodle LMS </h1>
                             </div>
                             <div class="border-bottom border-light-gray">
                                 <h3 id="free-computer"> <span class="text-bold">Authors:</span> Y. Zhang, A. Ghandour, and V. Shestak,</h3>
@@ -202,8 +202,6 @@ of each student as well as the quality of teaching.
                                         (k-NN), Support Vector Machine (SVM), and Random Forest (RF) </h3>
                             </div>
                         </div>
-
-                        
                     </div>
                 </div>
             </section>
