--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
             <nav id="navigationList" class="flex-self-center padding-col-md text-center">
                 <ul>
                     <li class="navbar-ul"><a class="text-simple active" href="#headerSection" title="Home">HOME</a></li>
-                    <li class="navbar-ul"><a class="text-simple text-white" href="#newsSection" title="News">NEWS</a></li>
+                    <li class="navbar-ul"><a class="text-simple text-white" href="#newsSection" title="News">GOALS</a></li>
                     <li class="navbar-ul"><a class="text-simple text-white" href="#featureSection" title="Feature">FEATURE</a></li>
-                    <li class="navbar-ul"><a class="text-simple text-white" href="#priceSection" title="Price">PRICE</a></li>
+                    <li class="navbar-ul"><a class="text-simple text-white" href="#priceSection" title="Price">REFERENCES</a></li>
                     <li class="navbar-ul"><a class="text-simple text-white" href="#timelineSection" title="Timeline">TIMELINE</a></li>
                     <li class="navbar-ul"><a class="text-simple text-white" href="#aboutUsSection" title="About">ABOUT</a></li>
                 </ul>
@@ -54,21 +54,21 @@
                     COMPREHENSIVE ANALYSIS OF LEARNERS' ACTIVITIES ON THE LEARNING MANAGEMENT SYSTEM (LMS)
                 </h3>
                 <div id="headerSection-body" class="width-half align-center-all flex-direction-auto flex-main-evenly padding-md ">
-                    <a id="button-more" href="#featureSection" class="btn btn-rounded btn-lg bg-transparent bg-transparent-hover  text-white text-simple text-bold">OUR GOALS</a>
-                    <a id="button-try" href="#newsSection" class="btn btn-rounded btn-lg bg-red hover-light text-white border-red text-simple text-bold">EXPECTED PRODUCTS</a>
+                    <a id="button-more" href="#newsSection" class="btn btn-rounded btn-lg bg-transparent bg-transparent-hover  text-white text-simple text-bold">OUR GOALS</a>
+                    <a id="button-try" href="#featureSection" class="btn btn-rounded btn-lg bg-red hover-light text-white border-red text-simple text-bold">EXPECTED PRODUCTS</a>
                 </div>
             </section>
             
             <!-- News -->
             <section id="newsSection" class="container-fluid bg-white text-center text-black">
-                <h1 id="newsSection-header" > <i class="fa fa-question"></i> WHAT ARE OUR GOALS? </h1>
+                <h1 id="newsSection-header" class="header text-center" style="font-size: 1.5cm"> &#127919 WHAT ARE OUR GOALS? </h1>
                 <h3 id="newsSection-description" class="width-half align-center-row text-justify-center">
-                    The main goal is to present a comprehensive analysis of learning activities on the Learning Man-
-                    agement System. In this topic, in-depth research will be done on some popular LMSs like Moodle. . .
+                    The main goal is to present a comprehensive analysis of learning activities on the Learning Management System.
+                    In this topic, in-depth research will be done on some popular LMSs like Moodle...
                     We will develop a core architecture for collecting data from learners in an LMS. Technologies based
-                    on Data Lake, Data Warehouse architectures such as Apache Spark, Apache Iceberg. . . will be used
+                    on Data Lake, Data Warehouse architectures such as Apache Spark, Apache Iceberg... will be used
                     to store and manage datasets. Based on the processed data, we will create a student performance
-                    assessment of the courses using what we have learned about big data, machine learning. . . It can
+                    assessment of the courses using what we have learned about big data, machine learning... It can
                     predict student outcomes based on the courses enrolled by the student. It can also provide schools
                     and teacher managers with a global perspective on the quality of each course and the productivity
                     of each student.
@@ -87,7 +87,7 @@
                 <h3 id="featureSection-description" class="width-half align-center-row text-justify-center">
                     Through this project, we expect to develop some models and applications to solve the problem. 
                     These models will help the LMS have better quality, thereby improving the learning efficiency
-of each student as well as the quality of teaching. 
+                    of each student as well as the quality of teaching. 
                 </h3>
                 <div id="featureSection-line" class="line line-md line-blue align-center-horizontal"></div>
 
@@ -126,9 +126,9 @@ of each student as well as the quality of teaching.
                 </div>
             </section>
 
-            <!-- Price -->
+            <!-- Related work -->
             <section id="priceSection" class="container-fluid text-center">
-                <h1 id="priceSection-header"> <i class="fa fa-usd text-yellow "></i> RELATED WORK </h1>
+                <h1 id="priceSection-header" class="header text-center" style="font-size: 1.5cm"> <i class="fa fa-usd text-yellow"></i> RELATED WORK </h1>
                 <h2 id="priceSection-description">
                     Through out this project, we have studied a lot of papers related to LMSs:
                 </h2>
@@ -139,14 +139,14 @@ of each student as well as the quality of teaching.
                         <div id="card-free" class="flex-col bg-white flex-col-1 text-center margin-sm shadow-hover border border-light-gray">
                             <div class="text-white bg-flat-black border-bottom border-light-gray">
                                 <h1 id="free-title">Using learning analytics to predict
-                                    students performance in moodle LMS </h1>
+                                    students performance in Moodle LMS </h1>
                             </div>
                             <div class="border-bottom border-light-gray">
                                 <h3 id="free-computer"> <span class="text-bold">Authors:</span> Y. Zhang, A. Ghandour, and V. Shestak,</h3>
                             </div>
                             <div class="border-bottom border-light-gray">
-                                <h3 id="free-account"> <span class="text-bold">Published in: </span> International Journal of Emerging Tech-
-                                    nologies in Learning (iJET), vol. 15, no. 20, pp. 102–115,  </h3>
+                                <h3 id="free-account"> <span class="text-bold">Published in: </span> International Journal of Emerging
+                                    Technologies in Learning (iJET), vol. 15, no. 20, pp. 102–115 </h3>
                             </div>
                             <div class="border-bottom border-light-gray">
                                 <h3 id="free-info"> <span class="text-bold">Year Published: </span> 2020 </h3>
@@ -167,8 +167,8 @@ of each student as well as the quality of teaching.
                                 <h3 id="basic-computer"> <span class="text-bold">Authors: </span> P. sh and M. Zaanen </h3>
                             </div>
                             <div class="border-bottom border-light-gray">
-                                <h3 id="basic-account"> <span class="text-bold">Published in: </span> International Journal of Information and Edu-
-                                    cation Technology, vol. 9, pp. 337–341 </h3>
+                                <h3 id="basic-account"> <span class="text-bold">Published in: </span> International Journal of Information and
+                                    Education Technology, vol. 9, pp. 337–341 </h3>
                             </div>
                             <div class="border-bottom border-light-gray">
                                 <h3 id="basic-info"> <span class="text-bold">Year Published: </span> 2019 </h3>
@@ -177,9 +177,7 @@ of each student as well as the quality of teaching.
                                 <h3 id="basic-support"> <span class="text-bold">Methods/Algorithms: </span> Decision tree J48 and ID3 algorithms </h3>
                             </div>
                         </div>
-                    </div>
-                    
-                    <div class="flex-direction-auto flex-col-1">
+
                         <!-- Third card -->
                         <div id="card-pro" class="flex-col bg-white flex-col-1 text-center  shadow-hover border border-light-gray">
                             <div class="text-white bg-red border-bottom border-light-gray">
@@ -197,8 +195,8 @@ of each student as well as the quality of teaching.
                                 <h3 id="pro-info"> <span class="text-bold">Year Published: </span> 2019 </h3>
                             </div>
                             <div class="border-bottom border-light-gray">
-                                    <h3 id="pro-support"> <span class="text-bold">Methods/Algorithms: </span> Classi-
-                                        fication and Regression Trees (CART), Linear Discriminant Analysis (LDA), k-Nearest Neighbors
+                                    <h3 id="pro-support"> <span class="text-bold">Methods/Algorithms: </span> Classification 
+                                        and Regression Trees (CART), Linear Discriminant Analysis (LDA), k-Nearest Neighbors
                                         (k-NN), Support Vector Machine (SVM), and Random Forest (RF) </h3>
                             </div>
                         </div>
@@ -230,7 +228,7 @@ of each student as well as the quality of teaching.
                                             <h3>LMSs SYSTEM <br>(29/03/2022)</h3>
                                             <p style="text-align: left;margin-left: 10%;">
                                                 <br>
-                                                - Introduciton about Learning Management System <br>
+                                                - Introduction about Learning Management System <br>
                                                 - Analyze some typical model like Moodle, Google Classroom,etc <br>
                                                 - Analyze BK e-learning system <br>
                                             </p>
@@ -256,7 +254,7 @@ of each student as well as the quality of teaching.
                                                 <br>
                                                 - Learn about process to build Data Lake and related knowledge <br>
                                                 - Analyze resources and data source <br>
-                                                - Contruct data lake model <br>
+                                                - Construct data lake model <br>
                                                 - Connect Kafka and Spark to Data Lake <br>
                                             </p>
                                 </div>
@@ -269,7 +267,7 @@ of each student as well as the quality of teaching.
                                             <p style="text-align: left;margin-left: 10%;">
                                                 <br>
                                                 - Data Cleaning <br>
-                                                - Data Intergration <br>
+                                                - Data Integration <br>
                                                 - Data Reduction <br>
                                                 - Data Transformation <br>
                                                 - Final Result discussion <br>
@@ -368,9 +366,9 @@ of each student as well as the quality of teaching.
                         <!-- Third card -->
                         <div id="people-nghia" class="flex-col flex-col-1 text-center margin-sm">
                             <img id="nghia-avatar" class="container-fluid-sm width-half align-center-row img-rounded" src="images/img_avatar.png">
-                            <h3 id="nghia-name" class="text-bold">Nghia Nguyen Huu</h3>
-                            <h3 id="nghia-role" class="margin-none">Backend Developer</span></h3>
-                            <p id="nghia-technology" class="margin-none">Node.js Cloud Database</span></p>
+                            <h3 id="nghia-name" class="text-bold">Cao Minh Quân</h3>
+                            <h3 id="nghia-role" class="margin-none">Member</span></h3>
+                            <p id="nghia-technology" class="margin-none">CS Undergraduate</span></p>
                         </div>
 
                     <!--Fourth card -->
@@ -391,11 +389,12 @@ of each student as well as the quality of teaching.
                 <!-- About us -->
                 <section id="aboutSection" class="flex-col-1 margin-md">
                     <div id="project" class="container-fluid-sm">
-                        <h2 id="project-title" class="margin-none">About Miner Tracker</h2>
+                        <h2 id="project-title" class="margin-none">About the project</h2>
                         <div id="project-line" class="line line-smd line-blue margin-none"></div>
                         <div id="project-body">
                             <p id="project-description" class="text-justify-left">
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi eu blandit ligula, ac tempor erat. Aliquam turpis enim, blandit ut posuere sit amet, commodo vel lectus. 
+                                This project is studied and developed by Team 10 of Big Data Club. For more information, please
+                                contact us by phone or email.
                             </p>
                         </div>
 
@@ -417,8 +416,8 @@ of each student as well as the quality of teaching.
                     <div id="contactSection-line" class="line line-smd line-blue margin-none"></div>
                     <div id="contactSection-body">
                         <h3 id="contact-address"><i class="fa fa-home margin-bottom"></i> <span class="text-bold"> Address:</span> District 10, Ho Chi Minh city</h3>
-                        <h3 id="contact-phone"><i class="fa fa-phone margin-bottom"></i> <span class="text-bold"> Phone:</span> (+84) O934.444.555</h3>
-                        <h3 id="contact-email"><i class="fa fa-envelope"></i> <span class="text-bold"> Email:</span> contact@minertracker.com</h3>
+                        <h3 id="contact-phone"><i class="fa fa-phone margin-bottom"></i> <span class="text-bold"> Phone:</span> (+84) 0934.444.555</h3>
+                        <h3 id="contact-email"><i class="fa fa-envelope"></i> <span class="text-bold"> Email:</span> team10@bdc.com</h3>
                     </div>
                 </section>
 
