--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                         <div id="item-info" class="container-sm">
                             <h3 id="info-title" class="text-bold"><div class="line line-bullet line-blue line-start"></div>  <i class="fa fa-thumbs-up"></i> RECOMMENDER SYSTEM</h3>
                             <div class="margin-bottom text-justify">
-                                <p id="info-description style="font-size: 14pt;">
+                                <p id="info-description" style="font-size: 14pt;">
                                     A system that helps students decide which course they should enroll in based on the results 
                                     of their previous courses or basic knowledge of the subject that course provides. 
                                 </p>
